# cursor-party-rewrite

./: Cargo.toml
public/: cursors2.js  index.html  styles.css
src/: main.rs
