[package]
name = "cursor-party-rewrite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1.0"

bytestring = "1.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

actix = "0.13"
actix-files = "0.6"
actix-web = "4.8"
actix-web-actors = "4.3"

futures = "0.3"
tokio = { version = "1", features = ["full"] }
